first card added

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
                 <div>
                     <ul>
-                        <li class="no-bolet">Nuevo</li>
+                        <li class="no-bullet">Nuevo</li>
                         <li>2021</li>
                         <li>Acús...</li>
                         <li>M.Cedro</li>
@@ -77,27 +77,29 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="cards_section">
             <div>
                 <div>
                     <h2>¿Qué tipo de piano estás buscando?</h2>
                 </div>
-                <article>
-                    <div>
+                <article class="whitecard">
+                    <div class="imagewhitecard">
                         <img src="./images/white-piano.png" alt="white-piano">
                     </div>
-                    <div>
-                        <h3>The Butterfly</h3>
-                        <ul>
-                            <li>Nuevo</li>
-                            <li>2021</li>
-                            <li>Acús</li>
-                            <li>M.Cedro</li>
-                        </ul>
+                    <div class="whitecardcharacteristics">
+                        <h3 class="whitecardname">The Butterfly</h3>
+                        <div>
+                            <ul class="whitelist">
+                                <li>Nuevo</li>
+                                <li>2021</li>
+                                <li>Acús</li>
+                                <li>M.Cedro</li>
+                            </ul>
+                        </div>
                     </div>
-                    <div>
+                    <div class="whitecost">
                         <p>Desde: $195k mn</p>
-                        <i></i>
+                        <i><img src="./images/shopping-cart-on-piano.png"></i>
                     </div>
                 </article>
                 <article>
@@ -175,7 +177,7 @@
                     <h3>BOOKPA</h3>
                 </div>
                 <div>
-                    <img src="./images/Piafmar.png" alt="imagen-piafmar">
+                    <img src="./images/imagen-piafmar.png" alt="imagen-piafmar">
                     <h3>PIAFMAR</h3>
                 </div>
             </div>
