--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
                 <div>
                     <h2>¿Qué tipo de piano estás buscando?</h2>
                 </div>
-                <article class="whitecard">
+                <article class="whitecard-butterfly">
                     <div class="imagewhitecard">
                         <img src="./images/white-piano.png" alt="white-piano">
                     </div>
-                    <div class="whitecardcharacteristics">
+                    <div>
                         <h3 class="whitecardname">The Butterfly</h3>
                         <div>
                             <ul class="whitelist">
@@ -102,81 +102,84 @@
                         <i><img src="./images/shopping-cart-on-piano.png"></i>
                     </div>
                 </article>
-                <article>
-                    <div>
+                <article class="whitecard-golden">
+                    <div class="imagen-white-card-gold">
                         <img src="./images/Golden-piano.png" alt="Golden-piano">
                     </div>
                     <div>
                         <h3>Golden Leaf</h3>
-                        <ul>
+                        <ul class="gold-list">
                             <li>Nuevo</li>
                             <li>2021</li>
                             <li>Acús</li>
                             <li>M.Cedro</li>
                         </ul>
                     </div>
-                    <div>
+                    <div class="gold-cost">
                         <p>Desde: $305k mn</p>
-                        <i></i>
+                        <i><img src="./images/shopping-cart-on-piano.png"></i>
                     </div>
                 </article>
-                <article>
-                    <div>
+                <article class="Whitecard-brown">
+                    <div class="imagen-white-card-brown">
                         <img src="./images/light-brown-piano.png" alt="light-brown-piano">
                     </div>
                     <div>
                         <h3>Walnut Strauss</h3>
-                        <ul>
+                        <ul class="brown-list">
                             <li>Nuevo</li>
                             <li>2021</li>
                             <li>Acús</li>
                             <li>M.Cedro</li>
                         </ul>
                     </div>
-                    <div>
+                    <div class="brown-cost">
                         <p>Desde: $125k mn</p>
-                        <i></i>
+                        <i><img src="./images/shopping-cart-on-piano.png"></i>
                     </div>
                 </article>
-                <button>Ver más</button>
+                <div class="btn-view--flex">
+                    <button>Ver más</button>
+                </div>
             </div>
         </section>
-        <section>
-            <div>
-                <div>
-                    <h2>Contáctanos</h2>
-                    <p>¿Quieres educarte formalmente en este instrumento?Toca más rápdo, logra mayor fluidez en las
-                        composiciones complejas.Contactános para conocer tus objetivos.</p>
-                </div>
-                <div>
-                    <form action="">
-                        <label for="">Nombre</label>
-                        <input type="text">
-                        <label for="">Teléfono</label>
-                        <input type="phone">
-                        <label for="">Email</label>
-                        <input type="email">
-                        <label for="">Cuéntanos más</label>
-                        <textarea></textarea>
-                    </form>
-                </div>
-                <button>Enviar</button>
+        <section class="section-form-gradient">
+            <div class="section-form">
+                <img src="./images/back-piano.png" alt="piano">
             </div>
+            <div>
+                <h2>Contáctanos</h2>
+                <p>¿Quieres educarte formalmente en este instrumento?Toca más rápdo, logra mayor fluidez en las
+                    composiciones complejas.Contactános para conocer tus objetivos.</p>
+            </div>
+            <div>
+                <form action="">
+                    <label for="">Nombre</label>
+                    <input type="text">
+                    <label for="">Teléfono</label>
+                    <input type="phone">
+                    <label for="">Email</label>
+                    <input type="email">
+                    <label for="">Cuéntanos más</label>
+                    <textarea></textarea>
+                </form>
+            </div>
+            <button type="submit">Enviar</button>
         </section>
-        <section>
+        <section class="section-form-gradient--partners">
             <div>
                 <div>
-                    <h3></h3>
+                    <h3>Conoce a nuestros partners</h3>
                 </div>
-                <div>
-                    <img src="./images/Petrof.png" alt="imagen-Petrof">
+                <div class="div">
+                    <img src="./images/petrof.png" alt="imagen-Petrof">
                     <h3>PETROF</h3>
                 </div>
-                <div>
+                <div class="div div__Bookpa">
                     <img src="./images/Bookpa.png" alt="imagen-bookpa">
                     <h3>BOOKPA</h3>
                 </div>
-                <div>
+                <div class="div">
                     <img src="./images/imagen-piafmar.png" alt="imagen-piafmar">
                     <h3>PIAFMAR</h3>
                 </div>
@@ -184,34 +187,37 @@
         </section>
     </main>
     <footer>
-        <div>
-            <img src="./images/logo-pazioli.png" alt="logo-pazioli">
-        </div>
-        <div>
-            <a href="#"><img src="./images/facebook.png" alt="facebook"></a>
-            <a href="#"><img src="./images/twitter.png" alt="twitter"></a>
-            <a href="#"><img src="./images/linkedin.png" alt="linkedin"></a>
-        </div>
-        <nav>
-            <a href="">Nosotros</a>
-            <a href="">Home</a>
-            <a href="">Nuevo</a>
-            <a href="">Planos</a>
-            <a href="">Conoce nuestros cursos</a>
-        </nav>
-        <div>
-            <a href="">Contáctanos</a>
-            <p>México Tonalá 10, Roma Nte, Cuautémoc, 03800 ciudad de México, CDMX.</p>
-        </div>
-        <div>
-            <p>&#xA9;Pazioli 2021.todos los derechos reservados</p>
-        </div>
-        <div>
-            <p>Powered with
-            <p>❤</p> by <b>DevKoore</b></p>
-        </div>
+        <div class="footer-gradient">
+            <div class="div-footer">
+                <img src="./images/logo-pazioli.png" alt="logo-pazioli">
+            </div>
+            <div class="div social-media">
+                <a href="#"><img src="./images/facebook.png" alt="facebook"></a>
+                <a href="#"><img src="./images/ttwitter.png" alt="twitter"></a>
+                <a href="#"><img src="./images/linkedin.png" alt="linkedin"></a>
+            </div>
+            <ul class="footer-nav">
+                <li><a href="">Nosotros</a></li>
+                <li> <a href="">Home</a></li>
+                <li><a href="">Nuevo</a></li>
+                <li> <a href="">Planos</a></li>
+                <li> <a href="">Conoce nuestros cursos</a></li>
+                <li><a href="">Contáctanos</a></li>
+            </ul>
+            <div class="div-footer text-footer address">
+                
+                <p> México <br> Tonalá 10, Roma Nte, Cuautémoc, 03800 ciudad de México, CDMX.</p>
+            </div>
+            <div class="div-footer text-footer pazioli">
+                <p><span class="brand">&#xA9; Pazioli 2021.</span> todos los derechos reservados</p>
+            </div>
+            <div class="div-footer text-footer">
+                <p>Powered with <span>❤</span>  by <br> <b>DevKoore</b></p>
+            </div>
         </div>
     </footer>
+    </div>
+
 </body>
 
 </html>
