--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         <nav class="nav nav__header-flex">
             <a href="#"><img class="img img__icon-pazioli" src="./images/icon-pazioli.png" alt="icon-pazioli"></a>
             <a href="#"><img class="img img__icon-shoping" src="./images/icon-shoping.png" alt="icon-shoping"></a>
+            <ul>
+                <li>Home</li>
+                <li>Pianos</li>
+                <li>Soy estudiante</li>
+                <button>Contáctanos</button>
+            </ul>
         </nav>
     </header>
     <main>
@@ -211,7 +217,7 @@
             <div class="div-footer text-footer pazioli">
                 <p><span class="brand">&#xA9; Pazioli 2021.</span> todos los derechos reservados</p>
             </div>
-            <div class="div-footer text-footer">
+            <div class="div-footer text-footer koders">
                 <p>Powered with <span>❤</span>  by <br> <b>DevKoore</b></p>
             </div>
         </div>
